--- a/src/pug/results.pug
+++ b/src/pug/results.pug
@@ -57,6 +57,7 @@ block wrapper
               +card(results__item.price__old,results__item.price__new,results__item.title,results__item.label,results__item.warranty,results__item.credit,results__item.card,results__item.delivery,results__item.repair,results__item.winter,results__item.spikes,true,'card_tile d-sm-flex')
         nav.pagination
           a.pagination__nav.pagination__nav_prev(href="#")
+            +icon('readmore-right','h3 color-theme-brand')
           span.pagination__item.pagination__item_current 1
           a.pagination__item(href="#") 2
           a.pagination__item(href="#") 3
@@ -64,6 +65,7 @@ block wrapper
           span.pagination__item.pagination__item_divider ...
           a.pagination__item(href="#") 57
           a.pagination__nav.pagination__nav_next(href="#")
+            +icon('readmore-right','h3 color-theme-brand')
 
     block results__seealso
       .mb-3
