--- a/src/pug/base/filter-tires.pug
+++ b/src/pug/base/filter-tires.pug
@@ -1,9 +1,9 @@
 #filter.aside
   .aside__wrapper
-    form.form.form_bg.form_filter(action="#")
+    form.form.form_bg.form_filter.mb-lg-3(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-        .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
-          +icon('tires','form__title-icon h3 mr-2')
+        .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
+          +icon('tires','form__title-icon h3 mr-1')
           | Подбор шин
         button.button-unstyled.h6(type="reset") Сбросить
       .form__section
