--- a/src/pug/filter-battery.pug
+++ b/src/pug/filter-battery.pug
@@ -30,10 +30,10 @@ block wrapper
         .col-xl-2.col-lg-3.mb-lg-4
           #filter.aside
             .aside__wrapper
-              form.form.form_bg.form_filter(action="#")
+              form.form.form_bg.form_filter.mb-lg-3(action="#")
                 .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
-                  .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
-                    +icon('battery','form__title-icon h3 mr-2')
+                  .form__title.form__title_icon.d-flex.align-items-center.flex-grow-1.h4.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
+                    +icon('battery','form__title-icon h3 mr-1')
                     | #{title}
                   button.button-unstyled.h6(type="reset") Сбросить
                 .form__section
@@ -86,51 +86,91 @@ block wrapper
                   .form__item.mb-4
                     input.form__field(type="text" value="")
                     label.form__label.form__label_title Введите название
-                  .row
+                  #brand.form__list.row
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Michelin-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Michelin-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Michelin
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Cordiant-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Cordiant-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Cordiant
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Pirelli-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Pirelli-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Pirelli
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Hankook-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Hankook-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Hankook
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Yokohama-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Yokohama-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Yokohama
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Goodyear-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Goodyear-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Good year
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Continental-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Continental-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Continental
+                    .col-6
+                      input.form__toggler.form__toggler_checkbox(id="Bridgestone-1" type="checkbox" value="")
+                      label.form__label.h5.mb-4(for="Bridgestone-1")
+                        +icon('checked','form__label-icon')
+                        span.form__label-title Bridgestone
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Michelin" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Michelin")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Michelin
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Cordiant" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Cordiant")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Cordiant
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Pirelli" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Pirelli")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Pirelli
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Hankook" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Hankook")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Hankook
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Yokohama" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Yokohama")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Yokohama
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Goodyear" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Goodyear")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Good year
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Continental" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Continental")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Continental
                     .col-6
                       input.form__toggler.form__toggler_checkbox(id="Bridgestone" type="checkbox" value="")
                       label.form__label.h5.mb-4(for="Bridgestone")
-                        +icon('checked', 'form__label-icon')
+                        +icon('checked','form__label-icon')
                         span.form__label-title Bridgestone
                 .d-flex.justify-content-center
-                  button.button-unstyled.d-flex.align-items-center(type="submit")
-                    span.h6.mr-2 Показать еще
-                    +icon('readmore','h3 color-theme-brand')
+                  button.readmore.d-flex.align-items-center(type="submit" data-toggle="list" data-target="#brand")
+                    span.h6.mr-2.pointer-events-none Показать еще
+                    +icon('readmore','h3 color-theme-brand readmore__icon')
               .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
                 .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
                   .h5.font-weight-normal.mr-2 Найдено:
