--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -63,15 +63,14 @@ block profile
           .d-flex.align-items-center.justify-content-end
             button.button.text-uppercase(type="submit") Отправить
     .pos-rel.col-lg-3
-      .header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap
-        .d-flex.align-items-center.justify-content-center
-          .header__nav-icon.header__nav-icon_feature_bonus.d-flex.flex-column.align-items-center.justify-content-center.mr-md-1
+      a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap(href="#")
+        span.d-flex.align-items-center.justify-content-center
+          span.header__nav-icon.header__nav-icon_feature_bonus.d-flex.flex-column.align-items-center.justify-content-center.mr-md-1
             +icon('user')
-          .header__counter.d-none.d-md-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-pill.px-2
+          span.header__counter.d-none.d-md-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-pill.px-2
             span.font-weight-bold.mr-1 300
             | Б.₽.
-        .d-flex.justify-content-center
-          a.header__btn-title.button-unstyled(href="#") Сергей | выход
+        span.header__btn-title.button-unstyled Сергей | выход
   .pos-rel
     .d-flex.align-items-center.justify-content-center
       button.header__btn.header__btn_type_cart-holder.header__btn_inverse(type="button" data-target="#cart")
