--- a/src/pug/base/category-details.pug
+++ b/src/pug/base/category-details.pug
@@ -1,4 +1,4 @@
-#details.aside
+#details.aside.aside_pos_fixed
   .aside__wrapper
     form.form.form_bg.form_filter.mb-lg-3(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
