--- a/src/pug/base/filter-details.pug
+++ b/src/pug/base/filter-details.pug
@@ -1,4 +1,4 @@
-#filter.aside
+#filter.aside.aside_pos_fixed
   .aside__wrapper
     form.form.form_bg.form_filter.mb-lg-3(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
@@ -13,8 +13,8 @@
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Применяемость
         .row
-          .col-4.col-lg-12
-            .form__select.mb-lg-4
+          .col-sm-6.col-lg-12
+            .form__select.mb-lg-4.mb-sm-0.mb-4
               .form__select-title Марка авто
               select.selecter
                 option --
@@ -24,7 +24,7 @@
                 option AUDI
                 option BENTLEY
                 option BMW
-          .col-4.col-lg-12
+          .col-sm-6.col-lg-12
             .form__select
               .form__select-title Модель
               select.selecter
@@ -37,8 +37,8 @@
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Дизайн
         .row
-          .col-4.col-lg-12
-            .form__select.mb-lg-4
+          .col-sm-6.col-lg-12
+            .form__select.mb-lg-4.mb-sm-0.mb-4
               .form__select-title Цвет
               select.selecter
                 option --
@@ -48,7 +48,7 @@
                 option Значение 4
                 option Значение 5
                 option Значение 6
-          .col-4.col-lg-12
+          .col-sm-6.col-lg-12
             .form__select
               .form__select-title Материал
               select.selecter
