--- a/src/pug/base/filter-wheels.pug
+++ b/src/pug/base/filter-wheels.pug
@@ -1,4 +1,4 @@
-#filter.aside
+#filter.aside.aside_pos_fixed
   .aside__wrapper
     form.form.form_bg.form_filter.mb-lg-3(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
@@ -9,8 +9,8 @@
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Типоразмер
         .row
-          .col-4.col-lg-12
-            .form__select.mb-lg-4
+          .col-sm-4.col-lg-12
+            .form__select.mb-lg-4.mb-sm-0.mb-4
               .form__select-title Ширина
               select.selecter
                 option --
@@ -20,8 +20,8 @@
                 option 10.5
                 option 12.5
                 option 30
-          .col-4.col-lg-12
-            .form__select.mb-lg-4
+          .col-sm-4.col-lg-12
+            .form__select.mb-lg-4.mb-sm-0.mb-4
               .form__select-title Диаметр (R)
               select.selecter
                 option --
@@ -31,7 +31,7 @@
                 option 11.5
                 option 12.5
                 option 13.5
-          .col-4.col-lg-12
+          .col-sm-4.col-lg-12
             .form__select
               .form__select-title Отверстие
               select.selecter
