--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -36,7 +36,7 @@ block wrapper
           meta(itemprop="priceCurrency" content="RUB")
       .category-counter.mb-4 1 840 товаров
 
-      #settings.aside
+      #settings.aside.aside_pos_fixed
         .aside__wrapper
           .section.section_filter.bg-theme-white.py-0.mb-lg-3
             .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
