--- a/src/pug/filter-battery.pug
+++ b/src/pug/filter-battery.pug
@@ -28,7 +28,7 @@ block wrapper
       .category-counter.mb-4 1 840 товаров в 4 каталогах
       .row
         .col-xl-2.col-lg-3.mb-lg-4
-          #filter.aside
+          #filter.aside.aside_pos_fixed
             .aside__wrapper
               form.form.form_bg.form_filter.mb-lg-3(action="#")
                 .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
@@ -39,8 +39,8 @@ block wrapper
                 .form__section
                   .form__section-title.h6.color-theme-disabled.mb-4 Параметры
                   .row
-                    .col-6.col-lg-12
-                      .form__select.mb-lg-4
+                    .col-sm-6.col-lg-12
+                      .form__select.mb-lg-4.mb-sm-0.mb-4
                         .form__select-title Полярность
                         select.selecter
                           option --
@@ -52,8 +52,8 @@ block wrapper
                           option Значение 6
                           option Значение 7
                           option Значение 8
-                    .col-6.col-lg-12
-                      .form__select
+                    .col-sm-6.col-lg-12
+                      .form__select.mb-lg-4
                         .form__select-title Ёмкость
                         select.selecter
                           option --
