--- a/src/pug/filter-oil.pug
+++ b/src/pug/filter-oil.pug
@@ -28,7 +28,7 @@ block wrapper
       .category-counter.mb-4 1 840 товаров в 4 каталогах
       .row
         .col-xl-2.col-lg-3.mb-lg-4
-          #filter.aside
+          #filter.aside.aside_pos_fixed
             .aside__wrapper
               form.form.form_bg.form_filter.mb-lg-3(action="#")
                 .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
@@ -39,7 +39,7 @@ block wrapper
                 .form__section
                   .form__section-title.h6.color-theme-disabled.mb-4 Параметры
                   .row
-                    .col-6.col-lg-12
+                    .col-sm-6.col-lg-12
                       .form__select.mb-4
                         .form__select-title Тип
                         select.selecter
@@ -52,7 +52,7 @@ block wrapper
                           option Значение 6
                           option Значение 7
                           option Значение 8
-                    .col-6.col-lg-12
+                    .col-sm-6.col-lg-12
                       .form__select.mb-4
                         .form__select-title Двигатель
                         select.selecter
@@ -65,8 +65,8 @@ block wrapper
                           option Значение 6
                           option Значение 7
                           option Значение 8
-                    .col-6.col-lg-12
-                      .form__select.mb-lg-4
+                    .col-sm-6.col-lg-12
+                      .form__select.mb-4
                         .form__select-title Вязкость
                         select.selecter
                           option --
@@ -78,7 +78,7 @@ block wrapper
                           option Значение 6
                           option Значение 7
                           option Значение 8
-                    .col-6.col-lg-12
+                    .col-sm-6.col-lg-12
                       .form__select
                         .form__select-title Назначение
                         select.selecter
