--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -45,7 +45,7 @@ block wrapper
       .col-xl-10.col-lg-9.mb-4
         .d-lg-none
           include base/category-details.pug
-        #settings.aside
+        #settings.aside.aside_pos_fixed
           .aside__wrapper
             .section.section_filter.bg-theme-white.py-0.mb-lg-3
               .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
