--- a/src/pug/checkout.pug
+++ b/src/pug/checkout.pug
@@ -54,7 +54,7 @@ block wrapper
             .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
               span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 4
               .h3.flex-grow-1.font-weight-bold.color-theme-brand Оплата
-      .sidebar.sidebar_pos_sticky.col-xl-3.col-lg-4.mb-lg-4
+      .aside.aside_pos_sticky.col-xl-3.col-lg-4.mb-lg-4
         .box-shadow.border-radius
           .border-bottom.px-md-4.px-3.py-md-4.py-3
             .d-flex.align-items-center.mb-3
